pycurl (7.43.0-3) UNRELEASED; urgency=medium

  [ Barry Warsaw ]
  * d/control: Put DPMT in Maintainers and myself in Uploaders.

  [ Ondřej Nový ]
  * d/control: Set Vcs-* to salsa.debian.org
  * d/copyright: Use https protocol in Format field
  * d/control: Deprecating priority extra as per policy 4.0.1
  * d/watch: Use https protocol
  * d/changelog: Remove trailing whitespaces

 -- Barry Warsaw <barry@debian.org>  Sun, 27 Aug 2017 23:35:02 -0400

pycurl (7.43.0-2) unstable; urgency=medium

  [ Ondřej Nový ]
  * Fixed VCS URL (https)
  * Bump debhelper compat version to 9
  * Standards-Version is 3.9.8 now (no changes needed)
  * Removed privacy breach in docs

  [ Barry Warsaw ]
  * d/rules: Prevent network access during package tests. (Closes: #830281)

 -- Barry Warsaw <barry@debian.org>  Thu, 15 Dec 2016 10:55:57 -0500

pycurl (7.43.0-1) unstable; urgency=medium

  * New upstream release.
  * d/control:
    - Add python{,3}-flaky to Build-Depends for test suite.
    - Test suite runs at build time but still fails, so continue not to fail.
    - Bump Standards-Version to 3.9.7 with no other changes necessary.
  * d/tests: Add a live test which downloads a well published resource.
    (Closes: #763770)

 -- Barry Warsaw <barry@debian.org>  Thu, 10 Mar 2016 11:19:37 -0500

pycurl (7.21.5-1) unstable; urgency=medium

  * New upstream release.
  * d/tests/control: Add a smoketest for Python 2 and 3.

 -- Barry Warsaw <barry@debian.org>  Tue, 12 Jan 2016 14:53:53 -0500

pycurl (7.19.5.3-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * 30_find-perm_slash.diff: Use "find -perm /x" instead of "find -perm +x".
    Closes: #808922

 -- Andreas Metzler <ametzler@debian.org>  Tue, 29 Dec 2015 14:30:53 +0100

pycurl (7.19.5.3-1) unstable; urgency=medium

  * New upstream release.

 -- Barry Warsaw <barry@debian.org>  Wed, 18 Nov 2015 13:46:28 -0500

pycurl (7.19.5.1-1) unstable; urgency=medium

  * New upstream release.